--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "mermaid": "^11.12.1",
