--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@dagrejs/dagre": "^1.1.8",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.13",
+    "immer": "^11.1.3",
     "lucide-react": "^0.555.0",
     "mermaid": "^11.12.1",
     "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "reactflow": "^11.11.4",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
